ensure text is user-visible while webfonts are loading

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@
 
 @font-face {
   font-family: Montserrat;
-  src: url(../fonts/Montserrat-Regular.ttf); }
+  src: url(../fonts/Montserrat-Regular.ttf);
+  font-display: swap; }
 
 *::after,
 *::before,
