--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -1,6 +1,7 @@
 @font-face {
     font-family: Montserrat;
     src: url(../fonts/Montserrat-Regular.ttf);
+    font-display: swap;
 }
 
 *::after,
